--- a/shop/templates/shop/signup.html
+++ b/shop/templates/shop/signup.html
@@ -1,8 +1,5 @@
 {% extends 'shop/base.html' %}
-{% block title %}
-  Sign Up
-{% endblock %}
-{% load static %}
+{% block title %} Sign Up {% endblock %}
 
 {% block main-content %}
 <div class="middle">
