--- a/shop/templates/shop/base.html
+++ b/shop/templates/shop/base.html
@@ -50,14 +50,14 @@
           </a>
           <div class="dropdown-menu">
             <a class="dropdown-item" href="{% url 'mobile' %}">Smartphones</a>
-            <a class="dropdown-item" href="#">Laptops</a>
+            <a class="dropdown-item" href="{% url 'laptop' %}">Laptops</a>
           </div>
         </li>
         <li class="nav-item">
           <a class="nav-link part" href="#">About</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link part" href="#att">Contact Us</a>
+          <a class="nav-link part" href="{% url 'contact_us' %}">Contact</a>
         </li>
       </ul>
     </div>
@@ -99,8 +99,8 @@
   <!-- Navbar -->
   {% if messages %}
   {% for message in messages %}
-  <div class="alert alert-{{ message.tags }} alert-dismissible fade show pb-0 mb-0" role="alert">
-    <strong>{{ message.tags }} :</strong> {{ message }}
+  <div class="alert alert-{{ message.tags }} alert-dismissible fade show mb-0" role="alert">
+    <strong>Message :</strong> {{ message }}
     <button type="button" class="close" data-dismiss="alert" aria-label="Close">
       <span aria-hidden="true">&times;</span>
     </button>
