--- a/shop/templates/shop/laptop.html
+++ b/shop/templates/shop/laptop.html
@@ -7,19 +7,21 @@
       <div class="col-sm-2">
         <div class="list-group">
           <a class="list-group-item list-group-item-action active" href="{% url 'laptop' %}">All</a>
-          <a class="list-group-item list-group-item-action" href="{% url 'laptopdata' 'Samsung' %}" >Samsung</a>
-          <a class="list-group-item list-group-item-action" href="{% url 'laptopdata' 'Apple' %}" >Apple</a>
-          <a class="list-group-item list-group-item-action" href="{% url 'laptopdata' 'below' %}">Below 10000</a>
-          <a class="list-group-item list-group-item-action" href="{% url 'laptopdata' 'above' %}">Above 10000</a> 
+          <a class="list-group-item list-group-item-action" href="{% url 'laptopdata' 'Dell' %}" >Dell</a>
+          <a class="list-group-item list-group-item-action" href="{% url 'laptopdata' 'HP' %}" >HP</a>
+          <a class="list-group-item list-group-item-action" href="{% url 'laptopdata' 'Lenovo' %}" >Lenovo</a>
+          <a class="list-group-item list-group-item-action" href="{% url 'laptopdata' 'Mac' %}" >Mac</a>
+          <a class="list-group-item list-group-item-action" href="{% url 'laptopdata' 'below' %}">Below 30000</a>
+          <a class="list-group-item list-group-item-action" href="{% url 'laptopdata' 'above' %}">Above 30000</a> 
         </div>
       </div>
       <div class="offset-1 col-sm-9">
         <div class="row">
-          {% for i in mobile %}
+          {% for i in laptop %}
            <div class="col-sm-4 text-center mb-4">
             <a href="{% url 'productdetail' i.id %}" class="">
              <div class="item">
-              <img src="{{i.image.url}}" alt="" height="300" class="">
+              <img src="{{i.image.url}}" alt="" height="280" width="280" class="">
               <div class="fw-bold">{{i.title}}</div>
               <div class="fw-bold">Rs. {{i.price}}</div>
              </div>
