--- a/shop/templates/shop/search.html
+++ b/shop/templates/shop/search.html
@@ -5,32 +5,35 @@
 {% block main-content %}
 <div class="container my-5">
   <h2><strong>Search Results:</strong></h2>
-    <div class="row">
-        {% if allSearches|length < 1 %}
-        <p>No search results. <br>
+   {% if query|length < 1 %}
+    <p>No query requested.</p>
+   {% elif query|length > 77 %}
+    <p>Very long search not allowed. Try different keywords.</p>
+   {% elif allSearches|length > 77 %}
+    <p>No search results. <br>
     Your search query : <b>{{query}}</b> did not match any documents. <br>
-    Suggestions: <br>
-    <li>Make sure that all words are spelled correctly.<br></li>
-    <li>Try more general keywords.<br></li>
-   <li> Try fewer keywords.<br></li>
-   <li> Try different keywords.</li>
+    Suggestions:
+    <ul>
+    <li>Make sure that all words are spelled correctly.</li>
+    <li>Try more general keywords.</li>
+    <li>Try fewer keywords.</li>
+    <li>Try different keywords.</li>
+    </ul>
     </p>
-        {% endif %}
-        {% if allSearches|length > 77 %}
-        <p>Very lon search not allowed. Try different keywords.</p>
-        {% else %}
+    {% else %}
+    <div class="row">
         {% for i in allSearches %}
          <div class="col-sm-4 text-center mb-4">
           <a href="{% url 'productdetail' i.id %}" class="">
            <div class="item">
-            <img src="{{i.image.url}}" alt="" height="300" class="">
+            <img src="{{i.image.url}}" alt="" height="280" width="280" class="">
             <div class="fw-bold">{{i.title}}</div>
             <div class="fw-bold">Rs. {{i.price}}</div>
            </div>
           </a>
          </div>
         {% endfor %}
-        {% endif %}
     </div>
+    {% endif %}
 </div>
 {% endblock main-content %}
