--- a/shop/templates/shop/signup.html
+++ b/shop/templates/shop/signup.html
@@ -8,7 +8,7 @@
     <form action="" method="post">
       {% csrf_token %}
       <div class="form-group row p-2">{{ form.as_table }}</div>
-      <button type="submit" class="bg-primary text-white">Sign Up</button>
+      <button type="submit" class="btn btn-primary text-white">Sign Up</button>
     </form>
   </fieldset>
 </div>
