--- a/shop/templates/shop/base.html
+++ b/shop/templates/shop/base.html
@@ -54,7 +54,7 @@
           </div>
         </li>
         <li class="nav-item">
-          <a class="nav-link part" href="#">About</a>
+          <a class="nav-link part" href="{% url 'about' %}">About</a>
         </li>
         <li class="nav-item">
           <a class="nav-link part" href="{% url 'contact_us' %}">Contact</a>
@@ -83,7 +83,9 @@
         </li>
         <li class="nav-item nav-link part">
           <span class="sr-only">(current)</span>
-          <img class="cart" src="{% static 'shop/images/icon-cart.svg' %}" alt="" data-container="body" data-toggle="popover" data-placement="bottom" data-content="Bottom popover"><span id="total_items">0</span>
+          <a href="{% url 'cart' %}">
+            <img class="cart" src="{% static 'shop/images/icon-cart.svg' %}" alt="" data-container="body" data-toggle="popover" data-placement="bottom" data-content="Bottom popover">
+          </a><span id="total_items">{{ items|length }}</span>
         </li>
         {% else %}
         <li class="nav-item">
@@ -123,9 +125,9 @@
   </footer>
   <!-- Footer -->
 
-  {% comment %} <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script> {% endcomment %}
+  <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
 
-  <script src="{% static 'shop/js/script.js' %}"></script>
+  <!-- <script src="{% static 'shop/js/script.js' %}"></script> -->
 
   <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
     integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
