--- a/shop/templates/shop/cart.html
+++ b/shop/templates/shop/cart.html
@@ -1,10 +1,87 @@
 {% extends "shop/base.html" %}
-{% block title %}Cart{% endblock title %}
+{% block title %} Cart {% endblock title %}
+{% load static %}
 
 {% block main-content %}
-<h3 class="mr-auto p-3">Shopping Cart</h3>
-<div class="row">
-    <div class="col-md-8"></div>
-    <div class="col-md-4"></div>
+<h2 class="text-center my-4">Cart</h2>
+{% if items %}
+<div class="container ">
+    <div class="row">
+        <div class="col-md-8">
+            <div class="card">
+                <div class="card-body">
+                    <h4>Cart({{ items|length }} items):</h4>
+                    {% for item in items %}
+                    <div class="row">
+                        <div class="col-sm-3 text-center align-self-center">
+                            <img src="{{ item.product.image.url }}" alt="" srcset=""
+                                class="img-fluid img-thumbnail shadow-sm" height="150" width="150">
+                        </div>
+                        <div class="col-sm-9">
+                            <div>
+                                <h5>{{ item.product.tiltle }}</h5>
+                                <p class="mb-2 text-muted small">{{ item.product.desc }}</p>
+                                <div class="my-3">
+                                    <label for="quantity">Quantity:</label>
+                                    <a class="minus-cart btn"><i class="fas fa-minus-square fa-lg"></i></a>
+                                    <span id="quantity">{{ item.quantity }}</span>
+                                    <a class="plus-cart btn"><i class="fas fa-plus-square fa-lg"></i></a>
+                                </div>
+                                <div class="d-flex justify-content-between">
+                                    <a href="#" class="btn btn-sm btn-secondary mr-3">Remove item </a>
+                                    <p class="mb-0"><span><strong>{{ item.total }}</strong></span></p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    {% endfor %}
+                </div>
+            </div>
+        </div>
+        <div class="col-md-4">
+            <div class="card">
+                <div class="card-body">
+                    <h3>The Total Amount of</h3>
+                    <ul class="list-group">
+                        <li
+                            class="list-group-item d-flex justify-content-between align-items-center border-0 px-0 pb-0">
+                            Amount<span>Rs. {{ total }}</span>
+                        </li>
+                        <li class="list-group-item d-flex justify-content-between align-items-center px-0">
+                            Shipping<span>Rs. 70.0</span>
+                        </li>
+                        <li
+                            class="list-group-item d-flex justify-content-between align-items-center border-0 px-0 mb-3">
+                            <div>
+                                <strong>Total</strong> <small>(including VAT)</small>
+                            </div>
+                            <span><strong>Rs. {{ grand_total }}</strong></span>
+                        </li>
+                    </ul>
+                    <div class="d-grid">
+                        <a href="{% url 'order_view' %}" class="btn btn-primary">Place Order</a>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </div>
 </div>
+<div class="container">
+    <div class="row">
+        <div class="col-sm-8">
+            <div class="card">
+                <div class="card-body">
+                    <h5 class="mb-4">We accept</h5>
+                    <img src="{% static 'app/images/payment.png' %}" alt="" class="img-fluid">
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+{% else %}
+<div>
+    <h3 class="text-center middle"><strong>You have no Product in Your Cart.</strong></h3>
+</div>
+{% endif %}
 {% endblock main-content %}
