--- a/shop/templates/shop/search.html
+++ b/shop/templates/shop/search.html
@@ -1,6 +1,5 @@
 {% extends 'shop/base.html' %}
 {% block title %} Search Menu {% endblock title %}
-{% load static %}
 
 {% block main-content %}
 <div class="container my-5">
@@ -9,7 +8,7 @@
     <p>No query requested.</p>
    {% elif query|length > 77 %}
     <p>Very long search not allowed. Try different keywords.</p>
-   {% elif allSearches|length > 77 %}
+   {% elif allSearches|length < 1 %}
     <p>No search results. <br>
     Your search query : <b>{{query}}</b> did not match any documents. <br>
     Suggestions:
