--- a/shop/templates/shop/signin.html
+++ b/shop/templates/shop/signin.html
@@ -11,7 +11,7 @@
     <form action="" method="post">
       {% csrf_token %}
       <div class="form-group row p-2">{{ form.as_table }}</div>
-      <button type="submit" class="bg-primary text-white">Sign In</button>
+      <button type="submit" class="btn btn-primary text-white">Sign In</button>
     </form>
   </fieldset>
 </div>
