--- a/shop/templates/shop/checkout.html
+++ b/shop/templates/shop/checkout.html
@@ -2,7 +2,7 @@
 {% block title %} Checkout {% endblock title %}
 
 {% block main-content %}
-<div class="middle">
+<div class="middle" style="position:absolute;">
     <fieldset style="border-radius: .5rem;">
         <h1 style="text-align: center;padding-bottom: .5rem;"><em>Add Details</em></h1>
         <form action="" method="post">
