--- a/shop/templates/shop/contact.html
+++ b/shop/templates/shop/contact.html
@@ -4,7 +4,7 @@
 {% block main-content %}
 <div class="middle">
     <fieldset style="border-radius: .5rem;">
-        <h1 style="text-align: center;padding-bottom: .5rem;"><em>CONTACT US:</em></h1>
+        <h1 style="text-align: center;padding-bottom: .5rem;"><em>CONTACT US</em></h1>
         <form action="" method="post">
             {% csrf_token %}
             <div class="form-group row p-2">{{ form.as_table }}</div>
