--- a/shop/templates/shop/base.html
+++ b/shop/templates/shop/base.html
@@ -127,7 +127,7 @@
 
   <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
 
-  <!-- <script src="{% static 'shop/js/script.js' %}"></script> -->
+  <script src="{% static 'shop/js/script.js' %}"></script>
 
   <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
     integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
