--- a/shop/templates/shop/productdetail.html
+++ b/shop/templates/shop/productdetail.html
@@ -1,38 +1,26 @@
 {% extends 'shop/base.html' %}
 {% block title %} {{ product.title }} {% endblock %}
-{% load static %}
 
 {% block main-content %}
-<div class="container mt-5">
+<div class="container my-5">
   <div class="row">
-    <div class="col-sm-4">
-      <img src="{{ product.image.url }}" style="width:24rem;" alt="" srcset="" />
+    <div class="col-sm-6 text-center align-self-center">
+      <img src="{{ product.image.url }}" alt="" class="img-fluid img-thumbnail">
     </div>
-    <div class="offset-1 col-sm-7 mt-auto">
-      <div class="d-flex justify-content-start">
-        <div class="item">
-          <h1 class="p-0">{{ product.title }}</h1>
-          <p>{{ product.desc }}</p>
-          <h5>{{ product.price }}</h5>
-          <span id="after_add">
-            <a href="{% url 'add_to_cart' product.id %}">
-                <button type="button" class="btn btn-primary text-white cart" id="{{ product.id }}">Add to Cart</button>
-            </a>
-          </span>
-        </div>
-      </div>
+    <div class="col-sm-5 offset-sm-1">
+      <h2>{{ product.title }}</h2>
+      <hr>
+      <p>{{ product.desc }}</p> <br>
+      <h4>Rs. {{ product.price }} <small class="fw-light text-decoration-line-through">15999</small></h4> <br>
+      <a href="{% url 'add_to_cart' product.id %}" class="btn btn-primary shadow px-5 py-2 cart">Add to Cart</a>
+      <h5 class="mt-5">Available Offers</h5>
+      <ul>
+        <li>Bank Offer 5% Unlimited Cashback on Flipkart Axis Bank Credit</li>
+        <li>Special Price Get extra ₹3000 off (price inclusive of discount)</li>
+        <li>No cost EMI ₹1,667/month. Standard EMI also available</li>
+        <li>Partner Offer ₹2000 Flipkart Gift Card on Every 1000th Transaction with a new Visa Debit/Credit Card</li>
+      </ul>
     </div>
   </div>
-</div>
-<div class="position-fixed bottom-0 right-0 p-3" style="z-index: 5; right: 0; bottom: 0;">
-    <div id="liveToast" class="toast hide" role="alert" aria-live="assertive" aria-atomic="true" data-delay="2000">
-      <div class="toast-header">
-        {% comment %} <img src="..." class="rounded mr-2" alt="..." />
-        <strong class="mr-auto">Bootstrap</strong> {% endcomment %}
-        <small>Just Now</small>
-        <button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-      </div>
-      <div class="toast-body">Successfully added to cart.</div>
-    </div>
 </div>
 {% endblock main-content %}
