--- a/shop/templates/shop/orders.html
+++ b/shop/templates/shop/orders.html
@@ -2,32 +2,37 @@
 {% block title %} Orders {% endblock title %}
 
 {% block main-content %}
-<div class="container-fluid">
+<div class="container">
     <h2 class="text-center mt-3"><strong>Order Summary</strong></h2>
     <hr class="mb-3">
-    <div class="card">
-        <div class="card-body">
-            {% for product in orders %}
-            <h5>Product: {{ product.title }}</h5>
-            <p>Quantity: {{ product.quantity }}</p>
-            <p class="fw-bold">Price: {{ product.price }}</p>
-            {% empty %}
-            <p>No products added.</p>
-            {% endfor %}
+    {% if items %}
+    <div class="border p-3">
+        {% for item in items %}
+        <div class="row">
+            <div class="col-sm-3 text-center align-self-center">
+                <img src="{{ item.product.image.url }}" alt="" srcset="" class="img-fluid img-thumbnail shadow-sm"
+                    height="150" width="150">
+            </div>
+            <div class="col-sm-9">
+                <div>
+                    <h5>{{ item.product.tiltle }}</h5>
+                    <p class="mb-2 text-muted small">{{ item.product.desc }}</p>
+                    <div class="my-3">
+                        <label for="quantity">Quantity:</label>
+                        <span id="quantity">{{ item.quantity }}</span> <br>
+                        <label for="date">Date:</label>
+                        <span id="date">{{ item.date }}</span>
+                    </div>
+                </div>
+            </div>
         </div>
+        {% if not forloop.last %}
+        <hr class="my-3">
+        {% endif %}
+        {% endfor %}
     </div>
-    <small>
-        Terms and Conditions: Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla necessitatibus nam quae.
-        Voluptas illo velit recusandae esse natus, accusamus, distinctio ducimus fugit molestiae saepe nam dolorem ullam
-        nemo, perferendis obcaecati perspiciatis voluptates eveniet enim ad! Voluptatum accusamus dignissimos esse
-        quisquam cum voluptatem, a maiores commodi consectetur soluta amet numquam fugit labore adipisci. Laudantium
-        animi alias suscipit quisquam tenetur quas harum veniam, temporibus quidem obcaecati, aut id iste? Officia
-        libero harum ipsa adipisci itaque magnam quibusdam qui commodi doloremque laborum excepturi officiis, animi
-        soluta assumenda consectetur obcaecati rem corrupti unde reiciendis deleniti incidunt. Esse dolores iste
-        veritatis nemo, pariatur sunt commodi!
-    </small>
-    <a href="{% url 'checkout_view' %}">
-        <button type="submit" class="btn btn-primary text-white">Continue</button>
-    </a>
+    {% else %}
+    <p class="middle">No Products bought yet.</p>
+    {% endif %}
 </div>
 {% endblock main-content %}
