--- a/shop/templates/shop/cart.html
+++ b/shop/templates/shop/cart.html
@@ -8,7 +8,7 @@
 <div class="container ">
     <div class="row">
         <div class="col-md-8 border p-3">
-            <h4>Cart ({{ items|length }} items)</h4>
+            <h4 class="pb-2">Cart ({{ items|length }} items)</h4>
             {% for item in items %}
             <div class="row">
                 <div class="col-sm-3 text-center align-self-center">
@@ -16,7 +16,7 @@
                 </div>
                 <div class="col-sm-9">
                     <div>
-                        <h5>{{ item.product.tiltle }}</h5>
+                        <h5>{{ item.product.title }}</h5>
                         <p class="mb-2 text-muted small">{{ item.product.desc }}</p>
                         <div class="my-3">
                             <label for="quantity">Quantity:</label>
@@ -26,7 +26,7 @@
                         </div>
                         <div class="d-flex justify-content-between">
                             <a href="{% url 'remove_item' item.product.id %}" class="btn btn-sm btn-secondary mr-3">Remove item </a>
-                            <p class="mb-0"><span><strong>{{ item.total }}</strong></span></p>
+                            <p class="mb-0"><span><strong>Rs. {{ item.product.price }}</strong> each</span></p>
                         </div>
                     </div>
                 </div>
@@ -55,7 +55,7 @@
                     </li>
                 </ul>
                 <div class="d-grid">
-                    <a href="{% url 'order_view' %}" class="btn btn-block btn-primary">Place Order</a>
+                    <a href="{% url 'checkout_view' %}" class="btn btn-block btn-primary">Place Order</a>
                 </div>
             </div>
         </div>
