--- a/shop/templates/shop/checkout.html
+++ b/shop/templates/shop/checkout.html
@@ -2,14 +2,67 @@
 {% block title %} Checkout {% endblock title %}
 
 {% block main-content %}
-<div class="middle" style="position:absolute;">
-    <fieldset style="border-radius: .5rem;">
-        <h1 style="text-align: center;padding-bottom: .5rem;"><em>Add Details</em></h1>
-        <form action="" method="post">
-            {% csrf_token %}
-            <div class="row form-group p-2">{{ form.as_table }}</div>
-            <button type="submit" class="btn btn-primary text-white">Continue</button>
-        </form>
-    </fieldset>
+<div class="container">
+    <div class="row pt-2">
+        <div class="col-md-6 p-3">
+            <div class="border p-3">
+                {% for item in items %}
+                <div class="row">
+                    <div class="col-sm-3 text-center align-self-center">
+                        <img src="{{ item.product.image.url }}" alt="" srcset=""
+                            class="img-fluid img-thumbnail shadow-sm" height="150" width="150">
+                    </div>
+                    <div class="col-sm-9">
+                        <div>
+                            <h5>{{ item.product.title }}</h5>
+                            <p class="mb-2 text-muted small">{{ item.product.desc }}</p>
+
+                            <div class="d-flex justify-content-between">
+                                <div class="mb-0">
+                                    <label for="quantity">Quantity:</label>
+                                    <span id="quantity">{{ item.quantity }}</span>
+                                </div>
+                                <p class="mb-0"><span><strong>Rs. {{ item.product.price }}</strong> each</span></p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                {% if not forloop.last %}
+                <hr class="my-3">
+                {% endif %}
+                {% endfor %}
+            </div>
+            <div class="border p-3 mt-3">
+                <h3>The Total Amount of</h3>
+                <ul class="list-group">
+                    <li class="list-group-item d-flex justify-content-between align-items-center border-0 px-0 pb-0">
+                        Amount<span>Rs. {{ total }}</span>
+                    </li>
+                    <li class="list-group-item d-flex justify-content-between align-items-center border-0 px-0">
+                        Shipping<span>Rs. 70.0</span>
+                    </li>
+                    <hr class="my-1">
+                    <li class="list-group-item d-flex justify-content-between align-items-center border-0 px-0 mb-3">
+                        <div>
+                            <strong>Total</strong> <small>(including VAT)</small>
+                        </div>
+                        <span><strong>Rs. {{ grand_total }}</strong></span>
+                    </li>
+                </ul>
+            </div>
+        </div>
+        <div class="col-md-6">
+            <fieldset style="border-radius: .5rem;">
+                <h1 style="text-align: center;padding-bottom: .5rem;"><em>Add Details</em></h1>
+                <form action="" method="post">
+                    {% csrf_token %}
+                    <div class="row form-group p-2">{{ form.as_table }}</div>
+                    <div class="text-center">
+                        <button type="submit" class="btn btn-primary text-white ">Continue</button>
+                    </div>
+                </form>
+            </fieldset>
+        </div>
+    </div>
 </div>
 {% endblock main-content %}
