--- a/shop/templates/shop/checkout.html
+++ b/shop/templates/shop/checkout.html
@@ -33,7 +33,7 @@
                 {% endfor %}
             </div>
             <div class="border p-3 mt-3">
-                <h3>The Total Amount of</h3>
+                <h5>The Total Amount of</h5>
                 <ul class="list-group">
                     <li class="list-group-item d-flex justify-content-between align-items-center border-0 px-0 pb-0">
                         Amount<span>Rs. {{ total }}</span>
@@ -42,7 +42,7 @@
                         Shipping<span>Rs. 70.0</span>
                     </li>
                     <hr class="my-1">
-                    <li class="list-group-item d-flex justify-content-between align-items-center border-0 px-0 mb-3">
+                    <li class="list-group-item d-flex justify-content-between align-items-center border-0 px-0">
                         <div>
                             <strong>Total</strong> <small>(including VAT)</small>
                         </div>
