--- a/shop/templates/shop/cart.html
+++ b/shop/templates/shop/cart.html
@@ -4,6 +4,7 @@
 
 {% block main-content %}
 <h2 class="text-center my-4">Cart</h2>
+<hr class="mb-3 mx-5">
 {% if items %}
 <div class="container ">
     <div class="row">
@@ -67,7 +68,7 @@
             <div class="card">
                 <div class="card-body">
                     <h5 class="mb-4">We accept</h5>
-                    <img src="{% static 'app/images/payment.png' %}" alt="" class="img-fluid">
+                    <img src="{% static 'shop/images/payment.png' %}" alt="" class="img-fluid">
                 </div>
             </div>
         </div>
