--- a/shop/templates/shop/orders.html
+++ b/shop/templates/shop/orders.html
@@ -32,7 +32,9 @@
         {% endfor %}
     </div>
     {% else %}
-    <p class="middle">No Products bought yet.</p>
+    <div>
+        <h3 class="text-center middle"><strong>No Products bought yet.</strong></h3>
+    </div>
     {% endif %}
 </div>
 {% endblock main-content %}
