--- a/shop/templates/shop/base.html
+++ b/shop/templates/shop/base.html
@@ -77,7 +77,7 @@
           <div class="dropdown-menu">
             <a class="dropdown-item" href="{% url 'profile' %}">Profile</a>
             <a class="dropdown-item" href="{% url 'order_view' %}">Orders</a>
-            <a class="dropdown-item" href="#">Change Password</a>
+            <a class="dropdown-item" href="{% url 'password' %}">Change Password</a>
             <a class="dropdown-item" href="{% url 'logout' %}">Logout</a>
           </div>
         </li>
