--- a/shop/templates/shop/checkout.html
+++ b/shop/templates/shop/checkout.html
@@ -3,7 +3,7 @@
 
 {% block main-content %}
 <div class="container">
-    <div class="row pt-2">
+    <div class="row py-2">
         <div class="col-md-6 p-3">
             <div class="border p-3">
                 {% for item in items %}
