--- a/shop/static/shop/css/base.css
+++ b/shop/static/shop/css/base.css
@@ -31,6 +31,10 @@ body {
     cursor: pointer;
 }
 
+a:hover {
+    text-decoration: none;
+}
+
 .carousel-indicators li {
     border-radius: 100%;
     height: 10px;
@@ -70,11 +74,11 @@ fieldset {
 }
 
 .ml-6 {
-    margin-left: 5rem;
+    margin-left: 5.2rem;
 }
 
 .mr-6 {
-    margin-right: 5rem;
+    margin-right: 5.2rem;
 }
 
 button {
