--- a/shop/templates/shop/cart.html
+++ b/shop/templates/shop/cart.html
@@ -3,8 +3,8 @@
 {% load static %}
 
 {% block main-content %}
-<h2 class="text-center my-4">Cart</h2>
-<hr class="mb-3 mx-5">
+<h2 class="text-center mt-4 mb-2">Cart</h2>
+<hr class="mb-4 mx-5">
 {% if items %}
 <div class="container ">
     <div class="row">
