--- a/shop/templates/shop/orders.html
+++ b/shop/templates/shop/orders.html
@@ -2,7 +2,7 @@
 {% block title %} Orders {% endblock title %}
 
 {% block main-content %}
-<div class="container">
+<div class="container pb-3">
     <h2 class="text-center mt-3"><strong>Order Summary</strong></h2>
     <hr class="mb-3">
     {% if products %}
