--- a/shop/templates/shop/about.html
+++ b/shop/templates/shop/about.html
@@ -4,11 +4,10 @@
 {% block main-content %}
 <div class="jumbotron jumbotron-fluid">
     <div class="container">
-      <h1 class="display-4">Fluid jumbotron</h1>
-      <p class="lead">This is a modified jumbotron that occupies the entire horizontal space of its parent.</p>
+      <h1 class="display-4">Welcome to <strong><em>shopping cart</em></strong>.</h1>
+      <p class="lead">This is my first ever project.</p>
       <hr class="my-4">
-      <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
-      <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>    
+      <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cupiditate placeat voluptas repellendus, quaerat repellat praesentium repudiandae. Ullam, perspiciatis quos? Rerum alias doloribus quis delectus dignissimos commodi velit, dolorum eligendi animi explicabo voluptate modi fuga aspernatur in. Iure natus aliquam tempora hic recusandae nemo sunt autem, fuga quisquam consequatur aspernatur non magnam ullam quasi nesciunt impedit quos beatae officiis corporis eveniet libero explicabo. Sint inventore reprehenderit doloremque. Nihil, quis est dolor necessitatibus mollitia nulla at, vitae nemo, adipisci laboriosam officia itaque quos? Dolorum, error. Fugiat quaerat minima numquam natus aliquam deserunt fugit quasi, cupiditate animi alias distinctio enim accusamus. Perspiciatis laborum similique tenetur optio molestiae voluptatibus deleniti? Magnam odit, totam, praesentium accusantium officia reiciendis numquam ratione sunt corporis pariatur voluptatibus repudiandae. Eos sunt dignissimos impedit molestias, ipsum similique doloremque reprehenderit ex nesciunt, voluptas qui laborum officiis neque est, commodi architecto illum! Sed nostrum voluptatem illum, sunt nemo maiores accusantium totam, soluta qui error dolores quam incidunt aspernatur iure odio! Ducimus mollitia, modi autem quas dolore ad. Quas doloribus cum et beatae nemo nesciunt totam, labore reprehenderit esse voluptatum ducimus voluptate facilis consequatur possimus. Nobis nisi sed voluptate repudiandae animi veritatis autem, harum amet deserunt aliquam illo veniam vel ratione alias cum?</p>
     </div>
 </div>
 {% endblock main-content %}
