--- a/shop/templates/shop/change-password.html
+++ b/shop/templates/shop/change-password.html
@@ -7,7 +7,15 @@
     <h1 style="text-align: center;padding-bottom: .5rem;"><em>Update Password</em></h1>
     <form action="" method="post">
       {% csrf_token %}
-      <div class="form-group row p-2">{{ form.as_table }}</div>
+      <div class="form-group row p-2">
+        <label for="id_username">Username:</label>
+        <input type="text" name="username" value="{{ username }}" class="form-control mb-1" maxlength="255" required=""
+          id="id_username">
+        <label for="id_password">Old Password:</label>
+        <input type="password" name="password" class="form-control mb-1" placeholder="Enter current password" maxlength="50" required="" id="id_password">
+        <label for="id_new_password">New password:</label>
+        <input type="password" name="new_password" class="form-control" placeholder="Enter new password" maxlength="50" required="" id="id_new_password">
+      </div>
       <button type="submit" class="btn btn-primary text-white">Save</button>
     </form>
   </fieldset>
