--- a/shop/templates/shop/change-password.html
+++ b/shop/templates/shop/change-password.html
@@ -8,13 +8,15 @@
     <form action="" method="post">
       {% csrf_token %}
       <div class="form-group row p-2">
-        <label for="id_username">Username:</label>
+        <label for="username">Username:</label>
         <input type="text" name="username" value="{{ username }}" class="form-control mb-1" maxlength="255" required=""
-          id="id_username">
-        <label for="id_password">Old Password:</label>
-        <input type="password" name="password" class="form-control mb-1" placeholder="Enter current password" maxlength="50" required="" id="id_password">
-        <label for="id_new_password">New password:</label>
-        <input type="password" name="new_password" class="form-control" placeholder="Enter new password" maxlength="50" required="" id="id_new_password">
+          id="username">
+        <label for="password">Old Password:</label>
+        <input type="password" name="password" class="form-control mb-1" placeholder="Enter current password" maxlength="50" required="" id="password">
+        <label for="new_password">New password:</label>
+        <input type="password" name="new_password" class="form-control" placeholder="Enter new password" maxlength="50" required="" id="new_password">
+        <label for="confirm_password">Confirm password:</label>
+        <input type="password" name="confirm_password" class="form-control" placeholder="Enter new password again" maxlength="50" required="" id="confirm_password">
       </div>
       <button type="submit" class="btn btn-primary text-white">Save</button>
     </form>
