--- a/shop/templates/shop/checkout.html
+++ b/shop/templates/shop/checkout.html
@@ -52,7 +52,7 @@
             </div>
         </div>
         <div class="col-md-6">
-            <fieldset style="border-radius: .5rem;">
+            <fieldset class="mt-3" style="border-radius: .5rem;">
                 <h1 style="text-align: center;padding-bottom: .5rem;"><em>Add Details</em></h1>
                 <form action="" method="post">
                     {% csrf_token %}
