--- a/shop/templates/shop/topwear.html
+++ b/shop/templates/shop/topwear.html
@@ -6,7 +6,7 @@
     <div class="row ">
       <div class="col-sm-2">
         <div class="list-group">
-          <a class="list-group-item list-group-item-action active" href="{% url 'topwear' %}">All</a>
+          <a class="list-group-item list-group-item-action" href="{% url 'topwear' %}">All</a>
           <a class="list-group-item list-group-item-action" href="{% url 'topweardata' 'below' %}">Below 400</a>
           <a class="list-group-item list-group-item-action" href="{% url 'topweardata' 'above' %}">Above 400</a> 
         </div>
