--- a/shop/templates/shop/bottomwear.html
+++ b/shop/templates/shop/bottomwear.html
@@ -6,7 +6,7 @@
     <div class="row ">
       <div class="col-sm-2">
         <div class="list-group">
-          <a class="list-group-item list-group-item-action active" href="{% url 'bottomwear' %}">All</a>
+          <a class="list-group-item list-group-item-action" href="{% url 'bottomwear' %}">All</a>
           <a class="list-group-item list-group-item-action" href="{% url 'bottomweardata' 'below' %}">Below 600</a>
           <a class="list-group-item list-group-item-action" href="{% url 'bottomweardata' 'above' %}">Above 600</a> 
         </div>
