--- a/shop/templates/shop/laptop.html
+++ b/shop/templates/shop/laptop.html
@@ -6,7 +6,7 @@
     <div class="row ">
       <div class="col-sm-2">
         <div class="list-group">
-          <a class="list-group-item list-group-item-action active" href="{% url 'laptop' %}">All</a>
+          <a class="list-group-item list-group-item-action" href="{% url 'laptop' %}">All</a>
           <a class="list-group-item list-group-item-action" href="{% url 'laptopdata' 'Dell' %}" >Dell</a>
           <a class="list-group-item list-group-item-action" href="{% url 'laptopdata' 'HP' %}" >HP</a>
           <a class="list-group-item list-group-item-action" href="{% url 'laptopdata' 'Lenovo' %}" >Lenovo</a>
@@ -21,7 +21,7 @@
            <div class="col-sm-4 text-center mb-4">
             <a href="{% url 'productdetail' i.id %}" class="">
              <div class="item">
-              <img src="{{i.image.url}}" alt="" height="280" width="280" class="">
+              <img src="{{i.image.url}}" alt="" height="260" class="">
               <div class="fw-bold">{{i.title}}</div>
               <div class="fw-bold">Rs. {{i.price}}</div>
              </div>
