--- a/shop/templates/shop/search.html
+++ b/shop/templates/shop/search.html
@@ -25,7 +25,7 @@
          <div class="col-sm-4 text-center mb-4">
           <a href="{% url 'productdetail' i.id %}" class="">
            <div class="item">
-            <img src="{{i.image.url}}" alt="" height="280" width="280" class="">
+            <img src="{{i.image.url}}" alt="" width="280" class="">
             <div class="fw-bold">{{i.title}}</div>
             <div class="fw-bold">Rs. {{i.price}}</div>
            </div>
