--- a/shop/templates/shop/change-password.html
+++ b/shop/templates/shop/change-password.html
@@ -9,8 +9,7 @@
       {% csrf_token %}
       <div class="form-group row p-2">
         <label for="username">Username:</label>
-        <input type="text" name="username" value="{{ username }}" class="form-control mb-1" maxlength="255" required=""
-          id="username">
+        <input type="text" name="username" value="{{ username }}" class="form-control mb-1" maxlength="255" required="" id="username">
         <label for="password">Old Password:</label>
         <input type="password" name="password" class="form-control mb-1" placeholder="Enter current password" maxlength="50" required="" id="password">
         <label for="new_password">New password:</label>
