--- a/shop/templates/shop/base.html
+++ b/shop/templates/shop/base.html
@@ -40,8 +40,8 @@
             Fashion
           </a>
           <div class="dropdown-menu">
-            <a class="dropdown-item" href="{% url 'topwear' %}">Top wear</a>
-            <a class="dropdown-item" href="{% url 'bottomwear' %}">Bottom Wear</a>
+            <a class="dropdown-item" href="{% url 'topwear' 'all' %}">Top wear</a>
+            <a class="dropdown-item" href="{% url 'bottomwear' 'all' %}">Bottom Wear</a>
           </div>
         </li>
         <li class="nav-item dropdown">
@@ -49,8 +49,8 @@
             Electronics
           </a>
           <div class="dropdown-menu">
-            <a class="dropdown-item" href="{% url 'mobile' %}">Smartphones</a>
-            <a class="dropdown-item" href="{% url 'laptop' %}">Laptops</a>
+            <a class="dropdown-item" href="{% url 'mobile' 'all' %}">Smartphones</a>
+            <a class="dropdown-item" href="{% url 'laptop' 'all' %}">Laptops</a>
           </div>
         </li>
         <li class="nav-item">
