--- a/shop/templates/shop/bottomwear.html
+++ b/shop/templates/shop/bottomwear.html
@@ -6,9 +6,9 @@
     <div class="row ">
       <div class="col-sm-2">
         <div class="list-group">
-          <a class="list-group-item list-group-item-action" href="{% url 'bottomwear' %}">All</a>
-          <a class="list-group-item list-group-item-action" href="{% url 'bottomweardata' 'below' %}">Below 600</a>
-          <a class="list-group-item list-group-item-action" href="{% url 'bottomweardata' 'above' %}">Above 600</a> 
+          <a class="list-group-item list-group-item-action {{ all }}" href="{% url 'bottomwear' 'all' %}">All</a>
+          <a class="list-group-item list-group-item-action {{ below }}" href="{% url 'bottomwear' 'below' %}">Below 600</a>
+          <a class="list-group-item list-group-item-action {{ above }}" href="{% url 'bottomwear' 'above' %}">Above 600</a> 
         </div>
       </div>
       <div class="offset-1 col-sm-9">
