--- a/shop/templates/shop/cart.html
+++ b/shop/templates/shop/cart.html
@@ -50,7 +50,7 @@
                     <hr class="my-1">
                     <li class="list-group-item d-flex justify-content-between align-items-center border-0 px-0 mb-3">
                         <div>
-                            <strong>Total</strong> <small>(including VAT)</small>
+                            <strong>Total</strong> <small>(including GST)</small>
                         </div>
                         <span><strong>Rs. {{ grand_total }}</strong></span>
                     </li>
