--- a/shop/templates/shop/checkout.html
+++ b/shop/templates/shop/checkout.html
@@ -44,7 +44,7 @@
                     <hr class="my-1">
                     <li class="list-group-item d-flex justify-content-between align-items-center border-0 px-0">
                         <div>
-                            <strong>Total</strong> <small>(including VAT)</small>
+                            <strong>Total</strong> <small>(including GST)</small>
                         </div>
                         <span><strong>Rs. {{ grand_total }}</strong></span>
                     </li>
