--- a/shop/templates/shop/laptop.html
+++ b/shop/templates/shop/laptop.html
@@ -6,13 +6,13 @@
     <div class="row ">
       <div class="col-sm-2">
         <div class="list-group">
-          <a class="list-group-item list-group-item-action" href="{% url 'laptop' %}">All</a>
-          <a class="list-group-item list-group-item-action" href="{% url 'laptopdata' 'Dell' %}" >Dell</a>
-          <a class="list-group-item list-group-item-action" href="{% url 'laptopdata' 'HP' %}" >HP</a>
-          <a class="list-group-item list-group-item-action" href="{% url 'laptopdata' 'Lenovo' %}" >Lenovo</a>
-          <a class="list-group-item list-group-item-action" href="{% url 'laptopdata' 'Mac' %}" >Mac</a>
-          <a class="list-group-item list-group-item-action" href="{% url 'laptopdata' 'below' %}">Below 30000</a>
-          <a class="list-group-item list-group-item-action" href="{% url 'laptopdata' 'above' %}">Above 30000</a> 
+          <a class="list-group-item list-group-item-action {{ all }}" href="{% url 'laptop' 'all' %}">All</a>
+          <a class="list-group-item list-group-item-action {{ Dell }}" href="{% url 'laptop' 'Dell' %}" >Dell</a>
+          <a class="list-group-item list-group-item-action {{ HP }}" href="{% url 'laptop' 'HP' %}" >HP</a>
+          <a class="list-group-item list-group-item-action {{ Lenovo }}" href="{% url 'laptop' 'Lenovo' %}" >Lenovo</a>
+          <a class="list-group-item list-group-item-action {{ Mac }}" href="{% url 'laptop' 'Mac' %}" >Mac</a>
+          <a class="list-group-item list-group-item-action {{ below }}" href="{% url 'laptop' 'below' %}">Below 30000</a>
+          <a class="list-group-item list-group-item-action {{ above }}" href="{% url 'laptop' 'above' %}">Above 30000</a> 
         </div>
       </div>
       <div class="offset-1 col-sm-9">
