--- a/shop/templates/shop/topwear.html
+++ b/shop/templates/shop/topwear.html
@@ -6,9 +6,9 @@
     <div class="row ">
       <div class="col-sm-2">
         <div class="list-group">
-          <a class="list-group-item list-group-item-action" href="{% url 'topwear' %}">All</a>
-          <a class="list-group-item list-group-item-action" href="{% url 'topweardata' 'below' %}">Below 400</a>
-          <a class="list-group-item list-group-item-action" href="{% url 'topweardata' 'above' %}">Above 400</a> 
+          <a class="list-group-item list-group-item-action {{ all }}" href="{% url 'topwear' 'all' %}">All</a>
+          <a class="list-group-item list-group-item-action {{ below }}" href="{% url 'topwear' 'below' %}">Below 400</a>
+          <a class="list-group-item list-group-item-action {{ above }}" href="{% url 'topwear' 'above' %}">Above 400</a> 
         </div>
       </div>
       <div class="offset-1 col-sm-9">
