--- a/shop/templates/shop/base.html
+++ b/shop/templates/shop/base.html
@@ -102,7 +102,7 @@
   {% if messages %}
   {% for message in messages %}
   <div class="alert alert-{{ message.tags }} alert-dismissible fade show mb-0" role="alert">
-    <strong>Message :</strong> {{ message }}
+    <center><strong>Message :</strong> {{ message }}</center>
     <button type="button" class="close" data-dismiss="alert" aria-label="Close">
       <span aria-hidden="true">&times;</span>
     </button>
